# propai

./: .env.example  .gitignore  README.md  SPARK_DESCRIPTION.md  audit.py  pyproject.toml  requirements.txt  team.md  test_api.py
docs/: agent_architecture.mmd  agentic_architecture_brief.md
nexusprop/: __init__.py  auto_scout.py  climate_risk.py  db.py  locations.py  market_data.py  seed_data.py  seed_data_old.py
nexusprop/agents/: __init__.py  analyst.py  base.py  chatbot.py  closer.py  concierge.py  due_diligence.py  investor_profiler.py  live_comps.py  mentor.py  negotiation_shadow.py  personal_research.py  photo_enhancer.py  profiler.py  qa.py  reno_vision.py  scout.py  stacker.py  state_market.py
nexusprop/api/: __init__.py  main.py  middleware.py
nexusprop/api/routes/: __init__.py  admin.py  chatbot.py  deals.py  due_diligence.py  investor_profiler.py  market.py  mentor.py  negotiation.py  offers.py  photos.py  profiler.py  properties.py  qa.py  recommendations.py  reno_vision.py  research.py  stacker.py  subscriptions.py  suburb_intelligence.py  webhooks.py
nexusprop/config/: __init__.py  settings.py
nexusprop/database/: __init__.py  vector_store.py
nexusprop/frontend/: admin.html  index.html  landing.html
nexusprop/frontend/static/js/: admin.js  nexusprop.js
nexusprop/models/: __init__.py  deal.py  investment.py  offer.py  property.py  subscription.py  suburb.py  user.py
nexusprop/notifications/: __init__.py  service.py
nexusprop/orchestrator/: __init__.py  orchestrator.py
nexusprop/scrapers/: __init__.py  council_da.py  public_notices.py
nexusprop/skills/: README.md  analyst.skill.md  chatbot.skill.md  closer.skill.md  concierge.skill.md  due_diligence.skill.md  live_comps.skill.md  mentor.skill.md  negotiation_shadow.skill.md  orchestrator.skill.md  photo_enhancer.skill.md  profiler.skill.md  qa.skill.md  scout.skill.md  stacker.skill.md
nexusprop/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_tools.py
nexusprop/tools/: __init__.py  bargain_scorer.py  comps_engine.py  data_cleaner.py  offer_writer.py  roi_calculator.py  scraper.py  suburb_intelligence.py
