[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propertyinsights"
version = "1.0.0"
description = "Your Digital Property Associate — Investment-Grade Australian Real Estate Intelligence"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [
    { name = "Property Insights Australia Pty Ltd", email = "dev@propertyinsightsaustralia.com.au" },
]
keywords = [
    "real-estate",
    "australia",
    "ai-agents",
    "property-investment",
    "bargain-score",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.48.0",
]
notifications = [
    "twilio>=9.0.0",
]
scraping = [
    "zenrows>=1.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
all = [
    "nexusprop[browser,notifications,scraping,dev]",
]

[project.scripts]
pia = "nexusprop.orchestrator.orchestrator:main"

[project.urls]
Homepage = "https://propertyinsightsaustralia.com.au"
Documentation = "https://docs.propertyinsightsaustralia.com.au"
Repository = "https://github.com/propertyinsightsau/pia"

# ── Tool Config ──────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["nexusprop/tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["nexusprop"]
omit = ["nexusprop/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.hatch.build.targets.wheel]
packages = ["nexusprop"]
